--- a/championship/templates/championship/teams/championship_teams_view.html
+++ b/championship/templates/championship/teams/championship_teams_view.html
@@ -4,11 +4,15 @@
 
 <div class="container-fluid p-4">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 d-flex align-items-center">
             <h2>Equipos: {{ championship.nombre }} - {{ championship.temporada }}</h2>
+            
         </div>
         <div class="col-md-6">
             <div class="d-flex justify-content-end">
+                <a href="{% url 'create_teams' championship.id %}" class="btn btn-primary me-3 d-flex align-items-center">
+                    <i class="bi bi-plus-lg me-2"></i>Añadir Equipo
+                </a>
                 <form class="d-flex" method="get" action="{% url 'championship_teams_view' championship.id %}">
                     <input class="form-control me-2" type="search" placeholder="Buscar equipo" aria-label="Buscar equipo" name="search_query" value="{{ search_query }}">
                     <button class="btn btn-outline-primary" type="submit">Buscar</button>
