--- a/championship/templates/championship/players/players_team_view.html
+++ b/championship/templates/championship/players/players_team_view.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <!-- Modal -->
+    <!-- Modal Añadir Jugador -->
     <div class="modal fade" id="addPlayerModal" tabindex="-1" aria-labelledby="addPlayerModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -227,22 +227,6 @@
                         </div>
                     {% endif %}
                 </div>
-                
-                <!-- <div class="card">
-                    <div class="card-body">
-                        {% if selected_player %}
-                            <h5 class="card-title">{{ selected_player.nombre }} {{ selected_player.apellido }}</h5>
-                            <p class="card-text">Dorsal: #{{ selected_player.dorsal }}</p>
-                            <p class="card-text">Cédula: {{ selected_player.cedula }}</p>
-                            <p class="card-text">Estado: {{ selected_player.estado }}</p>
-                            <div class="d-flex align-items-center justify-content-center rounded" style="width: 100%; height: 160px; overflow: hidden;">
-                                <img src="{{ selected_player.foto.url }}" class="img-fluid" style="width: 100px; height: 150px; object-fit: cover;" alt="Foto del jugador">
-                            </div>
-                        {% else %}
-                            <p>Selecciona un jugador para ver los detalles.</p>
-                        {% endif %}
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
