View players by championship, add existing player to a team.

--- a/championship/templates/championship/navbar_championship.html
+++ b/championship/templates/championship/navbar_championship.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="{% url 'championship_teams_view' championship.id %}">Equipos</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Jugadores</a>
+        <a class="nav-link" href="{% url 'championship_players_view' championship.id %}">Jugadores</a>
     </li>
 </ul>
 
